--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Terra</string>
-    <string name="title_activity_main">Terra</string>
-    <string name="package_name">com.terra.platform</string>
-    <string name="custom_url_scheme">com.terra.platform</string>
+    <string name="app_name">Aaranya</string>
+    <string name="title_activity_main">Aaranya</string>
+    <string name="package_name">com.aaranya.platform</string>
+    <string name="custom_url_scheme">com.aaranya.platform</string>
 </resources>
